Fixed chart labels on IE.

--- a/src/explore/public/explore.css
+++ b/src/explore/public/explore.css
@@ -603,6 +603,7 @@ h2 {
 }
 #data .ct-label {
   color: #bbbbbb;
+  fill: #bbbbbb;
 }
 #data .ct-grids .ct-grid {
   stroke: #999999;
